--- a/package.json
+++ b/package.json
@@ -12,29 +12,51 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "10.0.22",
+    "@emotion/styled": "10.0.23",
+    "@styled-system/css": "5.0.23",
+    "@types/mongodb": "3.3.11",
+    "apollo-datasource": "0.6.3",
     "apollo-server-micro": "2.9.7",
+    "emotion-theming": "10.0.19",
+    "form-data": "3.0.0",
+    "global": "4.4.0",
     "graphql": "14.5.8",
     "graphql-hooks": "4.0.2",
     "graphql-hooks-memcache": "1.2.4",
     "graphql-hooks-ssr": "1.1.4",
+    "graphql-request": "1.8.2",
+    "graphql-tools": "4.0.6",
     "isomorphic-unfetch": "3.0.0",
+    "jsonwebtoken": "8.5.1",
+    "mjml": "4.5.1",
+    "mongodb": "3.3.4",
     "next": "9.1.2",
     "next-offline": "4.0.6",
+    "node-fetch": "2.6.0",
+    "now": "16.5.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "styled-components": "4.4.1",
-    "styled-tools": "1.7.1"
+    "react-hook-form": "3.28.3",
+    "rebass": "4.0.7",
+    "styled-system": "5.1.2",
+    "unfetch": "4.1.0",
+    "uuid": "3.3.3"
   },
   "browser": {
     "graphql-hooks-ssr": false
   },
   "devDependencies": {
     "@babel/core": "7.7.0",
-    "@types/node": "12.12.6",
+    "@emotion/babel-preset-css-prop": "10.0.23",
+    "@types/jsonwebtoken": "8.3.5",
+    "@types/node": "12.12.8",
+    "@types/node-fetch": "2.5.3",
     "@types/react": "16.9.11",
-    "@types/styled-components": "4.1.21",
+    "@types/styled-system": "5.1.4",
+    "@types/uuid": "3.4.6",
+    "babel-plugin-emotion": "10.0.23",
     "babel-plugin-inline-react-svg": "1.1.0",
-    "babel-plugin-styled-components": "1.10.6",
     "typescript": "3.7.2"
   }
 }
