--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,12 @@ node_modules
 
 # misc
 .DS_Store
-.env*
+.env
 .cache
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+emails/out
