--- a/now.json
+++ b/now.json
@@ -2,6 +2,10 @@
   "version": 2,
   "name": "givto",
   "env": {
-    "MONGODB_URI": "@givto-mongodb-conn-str"
+    "MONGODB_URI": "@givto-mongodb-conn-str",
+    "MONGODB_DB": "@mongodb-dbname",
+    "MAILGUN_API_KEY": "@mailgun-api-key",
+    "MAILGUN_API_BASE": "@mailgun-api-base",
+    "JWT_SECRET_KEY": "@jwt-secret-key"
   }
 }
