--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "form-data": "3.0.0",
     "global": "4.4.0",
     "graphql": "14.5.8",
-    "graphql-hooks": "4.0.2",
+    "graphql-hooks": "4.1.1",
     "graphql-hooks-memcache": "1.2.4",
     "graphql-hooks-ssr": "1.1.4",
     "graphql-request": "1.8.2",
@@ -37,7 +37,10 @@
     "now": "16.5.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-feather": "2.0.3",
     "react-hook-form": "3.28.3",
+    "react-spinners": "0.6.1",
+    "react-tiny-popover": "4.0.0",
     "rebass": "4.0.7",
     "styled-system": "5.1.2",
     "unfetch": "4.1.0",
@@ -53,10 +56,12 @@
     "@types/node": "12.12.8",
     "@types/node-fetch": "2.5.3",
     "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
     "@types/styled-system": "5.1.4",
     "@types/uuid": "3.4.6",
     "babel-plugin-emotion": "10.0.23",
     "babel-plugin-inline-react-svg": "1.1.0",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
     "typescript": "3.7.2"
   }
 }
