--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "8.5.1",
     "mjml": "4.5.1",
     "mongodb": "3.3.4",
+    "ms": "2.1.2",
     "next": "9.1.2",
     "next-offline": "4.0.6",
     "node-fetch": "2.6.0",
@@ -53,6 +54,7 @@
     "@babel/core": "7.7.0",
     "@emotion/babel-preset-css-prop": "10.0.23",
     "@types/jsonwebtoken": "8.3.5",
+    "@types/ms": "0.7.31",
     "@types/node": "12.12.8",
     "@types/node-fetch": "2.5.3",
     "@types/react": "16.9.11",
