--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.7.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
     "@emotion/babel-preset-css-prop": "10.0.23",
     "@types/jsonwebtoken": "8.3.5",
     "@types/ms": "0.7.31",
