--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-spinners": "0.6.1",
     "react-tiny-popover": "4.0.0",
     "rebass": "4.0.7",
+    "smoothscroll-polyfill": "0.4.4",
     "styled-system": "5.1.2",
     "unfetch": "4.1.0",
     "uuid": "3.3.3"
@@ -61,6 +62,7 @@
     "@types/node-fetch": "2.5.4",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/smoothscroll-polyfill": "0.3.1",
     "@types/styled-system": "5.1.4",
     "@types/uuid": "3.4.6",
     "babel-plugin-emotion": "10.0.23",
