--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
     "@styled-system/css": "5.1.4",
+    "@use-it/event-listener": "0.1.3",
     "apollo-datasource": "0.6.3",
     "apollo-server-micro": "2.9.13",
     "emotion-theming": "10.0.19",
@@ -56,13 +57,13 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
     "@emotion/babel-preset-css-prop": "10.0.23",
     "@types/jsonwebtoken": "8.3.5",
+    "@types/mongodb": "3.3.12",
     "@types/ms": "0.7.31",
     "@types/nanoid": "2.1.0",
     "@types/node": "12.12.17",
     "@types/node-fetch": "2.5.4",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
-    "@types/mongodb": "3.3.12",
     "@types/smoothscroll-polyfill": "0.3.1",
     "@types/styled-system": "5.1.4",
     "babel-plugin-emotion": "10.0.23",
