--- a/now.json
+++ b/now.json
@@ -6,7 +6,7 @@
       "src": "^/service-worker.js$",
       "dest": "/_next/static/service-worker.js",
       "headers": {
-        "cache-control": "public, max-age=43200, immutable",
+        "cache-control": "no-cache, max-age=0",
         "Service-Worker-Allowed": "/"
       }
     }
