Implement magic links for login flow

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ MAILGUN_API_KEY=key
 MAILGUN_API_BASE=https://api.eu.mailgun.net/v3/domain
 JWT_SECRET_KEY=abc
 APP_HOST=localhost:3000
+SENTRY_DSN=https://sentry-dsn
