--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/plugin-proposal-optional-chaining": "7.7.5",
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
+    "@sentry/browser": "5.10.2",
+    "@sentry/node": "5.10.2",
     "@styled-system/css": "5.1.4",
     "@use-it/event-listener": "0.1.3",
     "apollo-datasource": "0.6.3",
@@ -43,6 +45,7 @@
     "react-hook-form": "3.28.15",
     "react-hotkeys-hook": "1.5.4",
     "react-spinners": "0.6.1",
+    "react-spring": "8.0.27",
     "react-tiny-popover": "4.0.0",
     "rebass": "4.0.7",
     "smoothscroll-polyfill": "0.4.4",
