--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "givto",
   "version": "1.0.0",
-  "description": "secret santa app",
+  "description": "Secret Santa app",
   "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "now-build": "next build"
+    "tsc": "tsc --noEmit"
   },
   "author": "",
   "license": "MIT",
@@ -20,31 +20,30 @@
     "@styled-system/css": "5.1.4",
     "@use-it/event-listener": "0.1.3",
     "apollo-datasource": "0.6.3",
-    "apollo-server-micro": "2.9.13",
+    "apollo-server-micro": "2.9.14",
     "emotion-theming": "10.0.19",
     "form-data": "3.0.0",
-    "global": "4.4.0",
     "graphql": "14.5.8",
-    "graphql-hooks": "4.2.0",
+    "graphql-hooks": "4.3.0",
     "graphql-hooks-memcache": "1.3.0",
     "graphql-hooks-ssr": "1.1.5",
     "graphql-tools": "4.0.6",
     "isomorphic-unfetch": "3.0.0",
     "jsonwebtoken": "8.5.1",
-    "mongodb": "3.4.0",
+    "mongodb": "3.4.1",
     "ms": "2.1.2",
-    "nanoid": "2.1.7",
+    "nanoid": "2.1.8",
     "nanoid-dictionary": "2.0.0",
-    "next": "9.1.5",
+    "next": "9.1.6",
     "next-offline": "4.0.6",
     "node-fetch": "2.6.0",
-    "now": "16.6.3",
+    "now": "16.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-feather": "2.0.3",
-    "react-hook-form": "3.28.15",
+    "react-hook-form": "3.29.4",
     "react-hotkeys-hook": "1.5.4",
-    "react-spinners": "0.6.1",
+    "react-spinners": "0.7.1",
     "react-spring": "8.0.27",
     "react-tiny-popover": "4.0.0",
     "rebass": "4.0.7",
@@ -57,22 +56,22 @@
     "graphql-hooks-ssr": false
   },
   "devDependencies": {
-    "@babel/core": "7.7.5",
+    "@babel/core": "7.7.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
     "@emotion/babel-preset-css-prop": "10.0.23",
     "@types/jsonwebtoken": "8.3.5",
-    "@types/mongodb": "3.3.12",
+    "@types/mongodb": "3.3.13",
     "@types/ms": "0.7.31",
     "@types/nanoid": "2.1.0",
-    "@types/node": "12.12.17",
+    "@types/node": "12.12.21",
     "@types/node-fetch": "2.5.4",
-    "@types/react": "16.9.16",
+    "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/smoothscroll-polyfill": "0.3.1",
     "@types/styled-system": "5.1.4",
     "babel-plugin-emotion": "10.0.23",
     "babel-plugin-inline-react-svg": "1.1.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "typescript": "3.7.3"
+    "typescript": "3.7.4"
   }
 }
