--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
   "browser": {
     "graphql-hooks-ssr": false
   },
+  "resolutions": {
+    "**/js-yaml": "3.13.1"
+  },
   "devDependencies": {
     "@babel/core": "7.7.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
