--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install Dependencies
-        run: yarn tsc
+        run: yarn install --frozen-lockfile
       - name: TypeScript Compile
         run: yarn tsc
       - name: Build
