--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "apollo-server-micro": "2.12.0",
     "emotion-theming": "10.0.27",
     "form-data": "3.0.0",
-    "graphql": "15.0.0",
     "graphql-hooks": "4.4.4",
     "graphql-hooks-memcache": "1.3.2",
     "graphql-hooks-ssr": "1.1.5",
@@ -35,10 +34,10 @@
     "nanoid": "3.1.3",
     "nanoid-dictionary": "3.0.0",
     "next": "9.3.6",
-    "next-offline": "5.0.2",
     "node-fetch": "2.6.0",
     "now": "18.0.0",
     "react": "16.13.1",
+    "react-beautiful-dnd": "13.0.0",
     "react-dom": "16.13.1",
     "react-feather": "2.0.8",
     "react-hook-form": "5.6.1",
@@ -46,10 +45,8 @@
     "react-spinners": "0.8.3",
     "react-spring": "8.0.27",
     "react-tiny-popover": "4.0.0",
-    "rebass": "4.0.7",
     "smoothscroll-polyfill": "0.4.4",
     "styled-system": "5.1.5",
-    "unfetch": "4.1.0",
     "use-media": "1.4.0"
   },
   "browser": {
@@ -69,11 +66,13 @@
     "@types/node": "13.13.4",
     "@types/node-fetch": "2.5.7",
     "@types/react": "16.9.34",
+    "@types/react-beautiful-dnd": "12.1.2",
     "@types/react-dom": "16.9.7",
     "@types/smoothscroll-polyfill": "0.3.1",
     "@types/styled-system": "5.1.9",
     "babel-plugin-emotion": "10.0.33",
     "babel-plugin-inline-react-svg": "1.1.1",
+    "graphql": "15.0.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "typescript": "3.8.3"
   }
