--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Secret Santa app",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "tsc": "tsc --noEmit"
@@ -12,68 +12,66 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "7.9.0",
-    "@emotion/core": "10.0.28",
+    "@babel/plugin-proposal-optional-chaining": "7.12.1",
+    "@emotion/core": "10.1.1",
     "@emotion/styled": "10.0.27",
-    "@sentry/browser": "5.15.5",
-    "@sentry/node": "5.15.5",
+    "@sentry/browser": "5.27.2",
+    "@sentry/node": "5.27.2",
     "@styled-system/css": "5.1.5",
-    "@use-it/event-listener": "0.1.3",
-    "apollo-datasource": "0.7.0",
-    "apollo-server-micro": "2.12.0",
+    "@use-it/event-listener": "0.1.5",
+    "apollo-datasource": "0.7.2",
+    "apollo-server-micro": "2.19.0",
     "emotion-theming": "10.0.27",
     "form-data": "3.0.0",
-    "graphql-hooks": "4.4.4",
-    "graphql-hooks-memcache": "1.3.2",
-    "graphql-hooks-ssr": "1.1.5",
-    "graphql-tools": "5.0.0",
-    "isomorphic-unfetch": "3.0.0",
+    "graphql-hooks": "5.0.0",
+    "graphql-hooks-memcache": "2.0.0",
+    "graphql-hooks-ssr": "2.0.0",
+    "graphql-tools": "7.0.1",
+    "isomorphic-unfetch": "3.1.0",
+    "js-yaml": "3.14.0",
     "jsonwebtoken": "8.5.1",
-    "mongodb": "3.5.7",
+    "mongodb": "3.6.2",
     "ms": "2.1.2",
-    "nanoid": "3.1.3",
-    "nanoid-dictionary": "3.0.0",
-    "next": "9.3.6",
-    "node-fetch": "2.6.0",
-    "now": "18.0.0",
-    "react": "16.13.1",
+    "nanoid": "3.1.16",
+    "nanoid-dictionary": "4.1.0",
+    "next": "10.0.0",
+    "node-fetch": "2.6.1",
+    "now": "20.1.2",
+    "react": "17.0.1",
     "react-beautiful-dnd": "13.0.0",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.1",
     "react-feather": "2.0.8",
-    "react-hook-form": "5.6.1",
-    "react-hotkeys-hook": "2.1.3",
-    "react-spinners": "0.8.3",
+    "react-hook-form": "6.10.1",
+    "react-hotkeys-hook": "2.4.0",
+    "react-spinners": "0.9.0",
     "react-spring": "8.0.27",
-    "react-tiny-popover": "4.0.0",
+    "react-tiny-popover": "6.0.0-beta.2",
     "smoothscroll-polyfill": "0.4.4",
     "styled-system": "5.1.5",
     "use-media": "1.4.0"
-  },
-  "browser": {
-    "graphql-hooks-ssr": false
   },
   "resolutions": {
     "**/js-yaml": "3.13.1"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
-    "@emotion/babel-preset-css-prop": "10.0.27",
-    "@types/jsonwebtoken": "8.3.9",
-    "@types/mongodb": "3.5.14",
+    "@babel/core": "7.12.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.1",
+    "@emotion/babel-preset-css-prop": "10.1.0",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/mongodb": "3.5.32",
     "@types/ms": "0.7.31",
     "@types/nanoid": "2.1.0",
-    "@types/node": "13.13.4",
+    "@types/node": "14.14.6",
     "@types/node-fetch": "2.5.7",
-    "@types/react": "16.9.34",
-    "@types/react-beautiful-dnd": "12.1.2",
-    "@types/react-dom": "16.9.7",
+    "@types/react": "16.9.55",
+    "@types/react-beautiful-dnd": "13.0.0",
+    "@types/react-dom": "16.9.9",
     "@types/smoothscroll-polyfill": "0.3.1",
-    "@types/styled-system": "5.1.9",
+    "@types/styled-system": "5.1.10",
     "babel-plugin-emotion": "10.0.33",
-    "babel-plugin-inline-react-svg": "1.1.1",
-    "graphql": "15.0.0",
-    "tsconfig-paths-webpack-plugin": "3.2.0",
-    "typescript": "3.8.3"
+    "babel-plugin-inline-react-svg": "1.1.2",
+    "graphql": "15.4.0",
+    "tsconfig-paths-webpack-plugin": "3.3.0",
+    "typescript": "4.0.5"
   }
 }
