--- a/package.json
+++ b/package.json
@@ -24,11 +24,7 @@
     "emotion-theming": "10.0.27",
     "form-data": "3.0.0",
     "graphql-hooks": "5.0.0",
-    "graphql-hooks-memcache": "2.0.0",
-    "graphql-hooks-ssr": "2.0.0",
-    "graphql-tools": "7.0.1",
     "isomorphic-unfetch": "3.1.0",
-    "js-yaml": "3.14.0",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.2",
     "ms": "2.1.2",
@@ -36,7 +32,6 @@
     "nanoid-dictionary": "4.1.0",
     "next": "10.0.0",
     "node-fetch": "2.6.1",
-    "now": "20.1.2",
     "react": "17.0.1",
     "react-beautiful-dnd": "13.0.0",
     "react-dom": "17.0.1",
@@ -48,7 +43,8 @@
     "react-tiny-popover": "6.0.0-beta.2",
     "smoothscroll-polyfill": "0.4.4",
     "styled-system": "5.1.5",
-    "use-media": "1.4.0"
+    "use-media": "1.4.0",
+    "vercel": "20.1.2"
   },
   "resolutions": {
     "**/js-yaml": "3.13.1"
