--- a/package.json
+++ b/package.json
@@ -12,62 +12,54 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "7.12.1",
     "@emotion/core": "10.1.1",
     "@emotion/styled": "10.0.27",
-    "@sentry/browser": "5.27.2",
-    "@sentry/node": "5.27.2",
+    "@sentry/browser": "6.15.0",
+    "@sentry/node": "6.15.0",
     "@styled-system/css": "5.1.5",
-    "@use-it/event-listener": "0.1.5",
-    "apollo-datasource": "0.7.2",
-    "apollo-server-micro": "2.19.0",
+    "@use-it/event-listener": "0.1.7",
+    "apollo-datasource": "3.3.0",
+    "apollo-server-micro": "3.5.0",
     "emotion-theming": "10.0.27",
-    "form-data": "3.0.0",
-    "graphql-hooks": "5.0.0",
+    "form-data": "4.0.0",
+    "graphql": "16.0.1",
+    "graphql-hooks": "5.5.0",
     "isomorphic-unfetch": "3.1.0",
     "jsonwebtoken": "8.5.1",
-    "mongodb": "3.6.2",
+    "micro": "9.3.4",
+    "mongodb": "4.2.0",
     "ms": "2.1.2",
-    "nanoid": "3.1.16",
-    "nanoid-dictionary": "4.1.0",
-    "next": "10.0.0",
+    "nanoid": "3.1.30",
+    "nanoid-dictionary": "4.3.0",
+    "next": "12.0.4",
     "node-fetch": "2.6.1",
-    "react": "17.0.1",
-    "react-beautiful-dnd": "13.0.0",
-    "react-dom": "17.0.1",
-    "react-feather": "2.0.8",
-    "react-hook-form": "6.10.1",
-    "react-hotkeys-hook": "2.4.0",
-    "react-spinners": "0.9.0",
+    "react": "17.0.2",
+    "react-beautiful-dnd": "13.1.0",
+    "react-dom": "17.0.2",
+    "react-feather": "2.0.9",
+    "react-hook-form": "6.15.8",
+    "react-hotkeys-hook": "3.4.4",
+    "react-spinners": "0.11.0",
     "react-spring": "8.0.27",
-    "react-tiny-popover": "6.0.0-beta.2",
+    "react-tiny-popover": "7.0.1",
     "smoothscroll-polyfill": "0.4.4",
     "styled-system": "5.1.5",
-    "use-media": "1.4.0",
-    "vercel": "20.1.2"
-  },
-  "resolutions": {
-    "**/js-yaml": "3.13.1"
+    "use-media": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.1",
     "@emotion/babel-preset-css-prop": "10.1.0",
-    "@types/jsonwebtoken": "8.5.0",
-    "@types/mongodb": "3.5.32",
+    "@types/jsonwebtoken": "8.5.6",
     "@types/ms": "0.7.31",
-    "@types/nanoid": "2.1.0",
     "@types/node": "14.14.6",
     "@types/node-fetch": "2.5.7",
-    "@types/react": "16.9.55",
-    "@types/react-beautiful-dnd": "13.0.0",
-    "@types/react-dom": "16.9.9",
+    "@types/react": "17.0.36",
+    "@types/react-beautiful-dnd": "13.1.2",
+    "@types/react-dom": "17.0.11",
     "@types/smoothscroll-polyfill": "0.3.1",
     "@types/styled-system": "5.1.10",
     "babel-plugin-emotion": "10.0.33",
-    "babel-plugin-inline-react-svg": "1.1.2",
-    "graphql": "15.4.0",
-    "tsconfig-paths-webpack-plugin": "3.3.0",
-    "typescript": "4.0.5"
+    "babel-plugin-inline-react-svg": "2.0.1",
+    "typescript": "4.5.2"
   }
 }
