--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
   "presets": ["next/babel", "@emotion/babel-preset-css-prop"],
-  "plugins": [
-    ["inline-react-svg", { "svgo": false }],
-    "emotion",
-    "@babel/plugin-proposal-optional-chaining",
-    "@babel/plugin-proposal-nullish-coalescing-operator"
-  ]
+  "plugins": [["inline-react-svg", { "svgo": false }], "emotion"]
 }
