--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["next/babel", "@emotion/babel-preset-css-prop"],
-  "plugins": [["inline-react-svg", { "svgo": false }], "emotion"]
+  "plugins": [["inline-react-svg", { "svgo": false }]]
 }
