--- a/package.json
+++ b/package.json
@@ -12,54 +12,56 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@emotion/core": "10.1.1",
-    "@emotion/styled": "10.0.27",
-    "@sentry/browser": "6.15.0",
-    "@sentry/node": "6.15.0",
+    "@emotion/core": "10.3.1",
+    "@emotion/styled": "10.3.0",
+    "@sentry/browser": "7.20.0",
+    "@sentry/node": "7.20.0",
     "@styled-system/css": "5.1.5",
     "@use-it/event-listener": "0.1.7",
-    "apollo-datasource": "3.3.0",
-    "apollo-server-micro": "3.5.0",
-    "emotion-theming": "10.0.27",
+    "apollo-datasource": "3.3.2",
+    "apollo-server-micro": "3.11.1",
+    "emotion-theming": "10.3.0",
     "form-data": "4.0.0",
-    "graphql": "16.0.1",
-    "graphql-hooks": "5.5.0",
+    "graphql": "16.6.0",
+    "graphql-hooks": "6.0.5",
     "isomorphic-unfetch": "3.1.0",
     "jsonwebtoken": "8.5.1",
-    "micro": "9.3.4",
-    "mongodb": "4.2.0",
-    "ms": "2.1.2",
-    "nanoid": "3.1.30",
+    "micro": "9.4.1",
+    "mongodb": "4.12.0",
+    "ms": "2.1.3",
+    "nanoid": "4.0.0",
     "nanoid-dictionary": "4.3.0",
-    "next": "12.0.4",
+    "next": "13.0.4",
     "node-fetch": "2.6.1",
-    "react": "17.0.2",
-    "react-beautiful-dnd": "13.1.0",
-    "react-dom": "17.0.2",
-    "react-feather": "2.0.9",
-    "react-hook-form": "6.15.8",
-    "react-hotkeys-hook": "3.4.4",
-    "react-spinners": "0.11.0",
-    "react-spring": "8.0.27",
-    "react-tiny-popover": "7.0.1",
+    "react": "18.2.0",
+    "react-beautiful-dnd": "13.1.1",
+    "react-dom": "18.2.0",
+    "react-feather": "2.0.10",
+    "react-hook-form": "7.39.4",
+    "react-hotkeys-hook": "4.0.4",
+    "react-spinners": "0.13.6",
+    "react-spring": "9.5.5",
+    "react-tiny-popover": "^7.2.0",
     "smoothscroll-polyfill": "0.4.4",
     "styled-system": "5.1.5",
     "use-media": "1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.3",
-    "@emotion/babel-preset-css-prop": "10.1.0",
-    "@types/jsonwebtoken": "8.5.6",
+    "@babel/core": "7.20.2",
+    "@emotion/babel-preset-css-prop": "10.2.1",
+    "@types/jsonwebtoken": "8.5.9",
     "@types/ms": "0.7.31",
-    "@types/node": "14.14.6",
-    "@types/node-fetch": "2.5.7",
-    "@types/react": "17.0.36",
+    "@types/node": "18.11.9",
+    "@types/node-fetch": "2.6.2",
+    "@types/react": "18.0.25",
     "@types/react-beautiful-dnd": "13.1.2",
-    "@types/react-dom": "17.0.11",
+    "@types/react-dom": "18.0.9",
     "@types/smoothscroll-polyfill": "0.3.1",
-    "@types/styled-system": "5.1.10",
-    "babel-plugin-emotion": "10.0.33",
+    "@types/styled-system": "5.1.15",
     "babel-plugin-inline-react-svg": "2.0.1",
-    "typescript": "4.5.2"
+    "typescript": "4.9.3"
+  },
+  "resolutions": {
+    "**/@types/react": "18.0.25"
   }
 }
