--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nanoid": "4.0.0",
     "nanoid-dictionary": "4.3.0",
     "next": "13.0.4",
+    "next-intl": "2.9.1",
     "node-fetch": "2.6.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
@@ -42,7 +43,6 @@
     "react-spinners": "0.13.6",
     "react-spring": "9.5.5",
     "react-tiny-popover": "^7.2.0",
-    "smoothscroll-polyfill": "0.4.4",
     "styled-system": "5.1.5",
     "use-media": "1.4.0"
   },
